--- a/src/Style.css
+++ b/src/Style.css
@@ -25,6 +25,7 @@ ul{
 
 .navbar {
     position: fixed;
+    z-index: 1;
     display: grid;
     grid-template-columns: 1fr 9fr;
     align-items: center;
@@ -78,12 +79,65 @@ ul{
 }
 
 #slider {
-    height: calc(100vh - 7.75rem);
-    padding: var(--default-padding);
     background-color: #000;
-    background-image: url('./images/banner.jpg');
-    background-size: cover;
-    background-repeat: no-repeat;
-    background-position: center;
     color: #FFF;
 }
+
+.slide {
+    position: relative;
+    height: calc(100vh - 7.75rem);
+}
+
+.slide__background-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.slide__copy {
+    position: absolute;
+    top: 0;
+    left: 50vw;
+}
+
+.slide__copy h6 {
+    font-size: .9375rem;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: .1875rem;
+}
+
+.slide__copy h2 {
+    font-size: 6.25rem;
+    text-transform: uppercase;
+    line-height: 5.25rem;
+}
+
+.slide__copy h2 span {
+    display: block;
+}
+
+.btn {
+    cursor: pointer;
+    padding: 1rem 2.5rem;
+    border: .125rem solid #fff;
+    border-radius: 5rem;
+    color: var(--color-primary);
+    background: unset;
+    font-size: .9375rem;
+    font-weight: 700;
+    text-transform: uppercase;
+    transition: 0.5s all ease;
+}
+
+.btn:hover,
+.btn:active, 
+.btn:focus {
+    border-color: var(--color-primary);
+    background-color: var(--color-primary);
+    color: #fff;
+}
+
+
+
