feat(quote): add quote and image

--- a/src/Style.css
+++ b/src/Style.css
@@ -100,7 +100,7 @@ ul{
 
 .slide {
     position: relative;
-    height: calc(100vh - 7.75rem);
+    height: 75vh;
 }
 
 .slide__background-image {
@@ -217,4 +217,54 @@ ul{
 .btn--institutional:hover {
     color: var(--color-copy);
     background: unset;
+    box-shadow: 0 1rem 1rem #0006;
 }
+
+.quote {
+    background-image: url(./images/parallax.jpg);
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+}
+
+.quote__container {
+    display: grid;
+    align-items: center;
+    justify-items: end;
+    min-height: 80vh;
+}
+
+.quote__copy {
+    background-color: #fff;
+    padding: 3rem 3.375rem;
+}
+
+.quote__copy h6 {
+    font-size: .9375rem;
+    font-weight: 400;
+    letter-spacing: .1875rem;
+    line-height: 1.4375rem;
+    max-width: 53ch;
+    text-transform: uppercase;
+    margin: 0;
+}
+
+.quote__copy h2 {
+    font-size: 5rem;
+    line-height: 5rem;
+    text-transform: uppercase;
+    letter-spacing: -.1875rem;
+    margin: 1.875rem 0;
+}
+
+.quote__copy h2 span {
+    display: block;
+}
+
+.btn--quote {
+    color: var(--color-copy);
+    border-color: var(--color-copy);
+    background: unset;
+}
+
