--- a/src/Style.css
+++ b/src/Style.css
@@ -1,372 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700;900&family=Roboto:wght@400;700&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/fontawesome.min.css');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css');
 
-* {
-    box-sizing: border-box;
-}
+@import './css/_variables.css';
+@import './css/_base.css';
+@import './css/_utils.css';
+@import './css/_btn.css';
 
-:root {
-    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
-    --color-copy: #333;
-    --color-primary: #ffc500;
-    --default-padding: 1rem;
-    color: var(--color-copy);
-}
+@import './css/_navbar.css';
+@import './css/_hero.css';
+@import './css/_footer.css';
 
-body {
-    margin: 0;
-    padding-top: 7.75rem;
-}
+@import './css/_home.css';
+@import './css/_contacts.css';
 
-header,
-main,
-footer {
-    overflow-y: hidden;
-}
-
-.container{
-    max-width: 1140px;
-    margin: 0 auto;
-}
-
-ul{
-    display: flex;
-    list-style: none;
-    padding-left: 0;
-}
-
-.navbar {
-    position: fixed;
-    z-index: 1;
-    top: 0;
-    left: 0;
-    width: 100%;
-    background-color: #000;
-    color: #fff;
-}
-
-.navbar__container {
-    display: grid;
-    grid-template-columns: 1fr 9fr;
-    align-items: center;
-
-    width: 100%;
-    height: 7.75rem;
-    padding: 0 1rem;
-}
-
-.navbar__links {
-    justify-self: end;
-}
-
-.navbar__links li{
-    font-size: .875rem;
-    margin-right: 3rem; 
-    text-transform: uppercase;
-}
-
-.navbar__links a {
-    font-weight: 300;
-    color: #fff;
-    text-decoration: none;
-}
-
-.navbar__links a:hover {
-    color: var(--color-primary);
-}
-
-.logo-studion {
-    font-size: 2.375rem;
-    font-weight: 900;
-    line-height: 1ch;
-    text-transform: uppercase;
-    text-align: right;
-}
-
-.logo-studion__subtitle {
-    font-size: .875rem;
-    font-weight: 300;
-    
-}
-
-.copy--primary {
-    color: var(--color-primary);
-}
-
-#slider {
-    background-color: #000;
-    color: #FFF;
-}
-
-.slide {
-    position: relative;
-    height: 75vh;
-}
-
-.slide__background-image {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    object-position: center;
-}
-
-.slide__copy {
-    position: absolute;
-    top: 0;
-    left: 50vw;
-}
-
-.slide__copy h6 {
-    font-size: .9375rem;
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: .1875rem;
-}
-
-.slide__copy h2 {
-    font-size: 6.25rem;
-    text-transform: uppercase;
-    line-height: 5.25rem;
-}
-
-.slide__copy h2 span {
-    display: block;
-}
-
-.btn {
-    cursor: pointer;
-    padding: 1rem 2.5rem;
-    border: .125rem solid #fff;
-    border-radius: 5rem;
-    color: var(--color-primary);
-    background: unset;
-    font-size: .9375rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    transition: 0.5s all ease;
-}
-
-.btn:hover,
-.btn:active, 
-.btn:focus,
-.btn--institutional {
-    border-color: var(--color-primary);
-    background-color: var(--color-primary);
-    color: #fff;
-}
-
-#counter {
-    background-color: var(--color-primary);
-    color: #fff;
-    text-transform: uppercase;    
-}
-
-.counter__container{
-    display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
-    place-items: center;
-    padding: 4.375rem 1rem;
-}
-
-.counter__container h3 {
-    font-size: 2.1875rem;
-}
-
-.counter__container h3 small {
-    display: block;
-    font-size: 1.25rem;
-}
-
-.institutional {
-    display: grid;
-    grid-template-columns: auto auto;
-    gap: 3.125rem;
-    align-items: center;
-    padding: 4.375rem;
-}
-
-.institutional__image {
-    max-width: 550px;
-}
-
-.institutional__copy { 
-    padding: 0 1.875rem;
-}
-
-.institutional__copy h6 {
-    font-size: .875rem;
-    font-weight: 300;
-    letter-spacing: .1rem;
-    text-transform: uppercase;
-    margin: 0;
-}
-
-.institutional__copy h4 {
-    font-size: 1.5625rem;
-    margin-top: 1rem;
-}
-
-.instutitional p {
-    font-family: 'Roboto', sans-serif;
-    font-size: 1.0625rem;
-    line-height: 1.6875rem;
-    margin-bottom: 0;
-    margin-bottom: 2.5rem;
-}
-
-.btn--institutional:hover {
-    color: var(--color-copy);
-    background: unset;
-    box-shadow: 0 1rem 1rem #0006;
-}
-
-.quote {
-    background-image: url(./images/parallax.jpg);
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
-}
-
-.quote__container {
-    display: grid;
-    align-items: center;
-    justify-items: end;
-    min-height: 80vh;
-}
-
-.quote__copy {
-    background-color: #fff;
-    padding: 3rem 3.375rem;
-}
-
-.quote__copy h6 {
-    font-size: .9375rem;
-    font-weight: 400;
-    letter-spacing: .1875rem;
-    line-height: 1.4375rem;
-    max-width: 53ch;
-    text-transform: uppercase;
-    margin: 0;
-}
-
-.quote__copy h2 {
-    font-size: 5rem;
-    line-height: 5rem;
-    text-transform: uppercase;
-    letter-spacing: -.1875rem;
-    margin: 1.875rem 0;
-}
-
-.quote__copy h2 span {
-    display: block;
-}
-
-.btn--quote {
-    color: var(--color-copy);
-    border-color: var(--color-copy);
-    background: unset;
-}
-
-.footer {
-    background-color: #000;
-    color: #fff;
-    padding: 0 1rem;
-}
-
-.footer__container {
-    display: grid;
-    grid-template-columns: repeat(3, auto);
-    align-items: center;
-    padding: 2.75rem 3.75rem;
-}
-
-.footer .logo-studion {
-    justify-self: start;
-    margin: 0;
-}
-
-.logo-studion__subtitle {
-    display: block;
-}
-
-.footer__form {
-    display: grid;
-    place-items: center;
-    grid-template-columns: 9ch auto;
-    gap: 1.125rem;
-}
-
-.footer__form label {
-    font-size: .875rem;
-    font-weight: 300;
-    text-align: center;
-}
-
-.footer__email {
-    display: grid;
-    grid-template-columns: auto 3.375rem;
-    width: 100%;
-}
-
-.footer__form input {
-    width: 100%;
-    background-color: var(--color-primary);
-    border: unset;
-    padding: 1rem;
-    font-size: .875rem;
-    font-weight: 700;
-    text-transform: uppercase;
-    color: #000;
-}
-
-.footer__form input::placeholder {
-    color:#000;
-}
-
-.footer__form input:focus {
-    outline: unset;
-}
-
-.footer__form button {
-    cursor: pointer;
-    border: unset;
-    height: 100%;
-    transition: 0.3s all ease;
-}
-
-.footer__form button:hover {
-    color: #fff;
-    background-color: var(--color-copy);
-}
-
-.footer__social {
-    justify-self: end;
-}
-
-.footer__social a,
-.footer__social a:visited,
-.footer__social a:active {
-    color: #fff;
-    margin-left: .2rem;
-}
-
-.footer__social a .fa-twitter,
-.footer__social a:visited .fa-twitter,
-.footer__social a:active .fa-twitter {
-    color: #000;
-}
-
-.footer hr {
-    border-color: #fff4;
-    margin: 0;
-}
-
-.footer p {
-    text-align: center;
-    font-size: .875rem;
-    font-weight: 300;
-    margin: 1.5rem;
-}
