feat(adding page): adding gallery page

--- a/src/Style.css
+++ b/src/Style.css
@@ -16,3 +16,6 @@
 
 @import './css/_events.css';
 @import './css/_events-hero.css';
+
+@import './css/_galeria.css';
+@import './css/_galeria-hero.css';
