feat(javascript): adding slide

--- a/src/css/_navbar.css
+++ b/src/css/_navbar.css
@@ -22,7 +22,7 @@
 }
 
 .navbar__links li{
-    font-size: .875rem;
+    font-size: 1rem;
     margin-right: 3rem; 
     text-transform: uppercase;
 }
