--- a/src/css/_home.css
+++ b/src/css/_home.css
@@ -1,7 +1,38 @@
-#slider {
+.slider {
     background-color: #000;
     color: #FFF;
 }
+
+.slider__prev-arrow,
+.slider__next-arrow {
+  width: 2.5rem;
+  height: 2.5rem;
+  border: 5px solid #fff;
+  border-right: unset;
+  border-bottom: unset;
+  opacity: 0.9;
+}
+
+.slider__prev-arrow {
+  z-index: 1;
+  left: 1rem;
+  transform: rotate(-45deg);
+}
+
+.slider__next-arrow {
+  right: 1rem;
+  transform: rotate(135deg);
+}
+
+.slider__prev-arrow::before,
+.slider__next-arrow::before {
+  content: "";
+}
+
+.slick-arrow {
+    visibility: visible;
+  }
+
 
 .slide {
     position: relative;
@@ -45,7 +76,7 @@
     display: block;
 }
 
-.counter {
+#counter {
     background-color: var(--color-primary);
     color: #fff;
     text-transform: uppercase;    
