feat(empresa): adding page empresa

--- a/src/Style.css
+++ b/src/Style.css
@@ -19,3 +19,6 @@
 
 @import './css/_galeria.css';
 @import './css/_galeria-hero.css';
+
+@import './css/_empresa.css';
+@import './css/_empresa-hero.css';
