--- a/src/css/_home.css
+++ b/src/css/_home.css
@@ -1,5 +1,5 @@
 .slider {
-    background-color: #000;
+    background-color: #fff;
     color: #FFF;
 }
 
@@ -30,6 +30,16 @@
 }
 
 .slick-arrow {
+    display: none;
+}
+
+@media screen and (min-width: 1280px){
+    .slick-arrow {
+        display: block;
+    }
+}
+
+.slick-arrow {
     visibility: visible;
   }
 
@@ -54,9 +64,24 @@
     object-position: center;
 
     display: grid;
-    padding-left: 50vw;
     align-items: center;
-    
+    text-align: center;
+    padding: 20px;
+}
+
+.slide__copy span {
+    display: block;
+}
+
+@media screen and (min-width: 1280px) {
+    .slide__copy {
+        padding-left: 50vw;    
+        text-align: unset;
+    }
+
+    .slide__copy span {
+        display: inline;
+    }
 }
 
 .slide__copy h6 {
@@ -67,10 +92,18 @@
 }
 
 .slide__copy h2 {
-    font-size: 5.25rem;
+    font-size: 3.25rem;
     text-transform: uppercase;
-    line-height: 5.25rem;
+    line-height: 3.25rem;
 }
+
+@media screen and (min-width: 1280px){
+    .slide__copy h2 {
+        font-size: 5.25rem;
+        line-height: 5.25rem;
+    }
+}
+
 
 .slide__copy h2 span {
     display: block;
@@ -98,20 +131,43 @@
     font-size: 1.25rem;
 }
 
+/* Mobile */
 .institutional {
     display: grid;
-    grid-template-columns: auto auto;
+    grid-template-rows: auto auto;
     gap: 3.125rem;
     align-items: center;
-    padding: 4.375rem;
+    padding: 0 0 4.375rem 0;
+}
+
+/* Desktop */
+@media screen and (min-width: 1280px) {
+    .institutional{
+        grid-template-columns: auto auto;
+        padding: 4.375rem;
+    }
 }
 
 .institutional__image {
-    max-width: 550px;
+    max-width: 100vw;
 }
 
+@media screen and (min-width: 1280px){
+    .institutional__image {
+        max-width: 550px;
+    }
+}
+
+/* Mobile */
 .institutional__copy { 
-    padding: 0 1.875rem;
+    padding: 0 1rem 1.875rem 1rem;
+}
+
+/* Desktop */
+@media sreen and (min-width: 1280px){
+    .institutional__copy {
+        padding:  0 1.875rem;
+    }
 }
 
 .institutional__copy h6 {
@@ -137,26 +193,46 @@
 
 .quote {
     background-image: url(../images/parallax.jpg);
-    background-attachment: fixed;
     background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center;
+    background-size: auto 40%;
+    background-position: 40% top;
+}
+
+@media screen and (min-width: 1280px){
+    .quote {
+        background-attachment: fixed;
+        background-size: cover;
+        background-position: center;
+    }
 }
 
 .quote__container {
     display: grid;
-    align-items: center;
+    align-items: end;
     justify-items: end;
     min-height: 80vh;
 }
 
+@media screen and (min-width: 1280px){
+    .quote__container {
+        align-items: center;
+    }
+}
+
 .quote__copy {
     background-color: #fff;
-    padding: 3rem 3.375rem;
+    padding: 1rem;
+    padding-bottom: 4rem;
+}
+
+@media screen and (min-width: 1280px){
+    .quote__copy {
+        padding: 3rem 3.375rem;
+    }
 }
 
 .quote__copy h6 {
-    font-size: .9375rem;
+    font-size: .8rem;
     font-weight: 400;
     letter-spacing: .1875rem;
     line-height: 1.4375rem;
@@ -166,8 +242,8 @@
 }
 
 .quote__copy h2 {
-    font-size: 5rem;
-    line-height: 5rem;
+    font-size: 3.5rem;
+    line-height: 3.5rem;
     text-transform: uppercase;
     letter-spacing: -.1875rem;
     margin: 1.875rem 0;
@@ -175,4 +251,15 @@
 
 .quote__copy h2 span {
     display: block;
+}
+
+@media screen and (min-width: 1280px){
+    .quote__copy h6 {
+        font-size: .9375rem;
+    }
+
+    .quote__copy h2 {
+        font-size: 5rem;
+        line-height: 5rem;
+    }
 }
