feat(adding pages): pages depoiments and company.

--- a/src/Style.css
+++ b/src/Style.css
@@ -22,3 +22,6 @@
 
 @import './css/_empresa.css';
 @import './css/_empresa-hero.css';
+
+@import './css/_depoimetos.css';
+@import './css/_depoimentos-hero.css';
